compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_type_var_in_alias2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 929
expression: type X = List(a)
snapshot_kind: text
---
----- SOURCE CODE
type X = List(a)

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type X = List(a)
  │               ^

The type `a` is not defined or imported in this module.
